Project

General

Profile

Actions

Bug #45668

closed

librbd: fix compile error with CephContext declaration

Added by Willem Jan Withagen almost 4 years ago. Updated almost 4 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Clang errors out:
/home/jenkins/workspace/ceph-master/src/librbd/plugin/Types.h:9:1: error: declaration conflicts with target of using declaration already in scope
struct CephContext;
^
/home/jenkins/workspace/ceph-master/src/include/common_fwd.h:10:9: note: target of using declaration
class CephContext;
^
/home/jenkins/workspace/ceph-master/src/include/common_fwd.h:22:24: note: using declaration
using TOPNSPC::common::CephContext;
^

Actions #1

Updated by Willem Jan Withagen almost 4 years ago

  • Pull request ID set to 35209
Actions #2

Updated by Brad Hubbard almost 4 years ago

  • Project changed from Ceph to rbd
  • Category deleted (librbd)
Actions #3

Updated by Nathan Cutler almost 4 years ago

  • Status changed from New to Fix Under Review
Actions #4

Updated by Nathan Cutler almost 4 years ago

  • Assignee set to Willem Jan Withagen
Actions #5

Updated by Jason Dillaman almost 4 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF