librbd: fix compile error with CephContext declaration

Clang complains:
/home/jenkins/workspace/ceph-master/src/librbd/plugin/Types.h:9:1: error: declaration conflicts with target of using declaration already in scope
struct CephContext;
^
/home/jenkins/workspace/ceph-master/src/include/common_fwd.h:10:9: note: target of using declaration
class CephContext;
^
/home/jenkins/workspace/ceph-master/src/include/common_fwd.h:22:24: note: using declaration
using TOPNSPC::common::CephContext;
^

fixes: https://github.com/ceph/ceph/pull/35158
tracker: https://tracker.ceph.com/issues/45668
Signed-off-by: Willem Jan Withagen <wjw@digiware.nl>